2015-04-02  Oliver Hunt  <oliver@apple.com>

        Ensure that we always set network ATS context in the network process
        https://bugs.webkit.org/show_bug.cgi?id=143343

        Reviewed by Dan Bernstein.

        If a custom cache location or size we were early returning before setting
        the CFNetwork ATS context. This is clearly an error.

        * NetworkProcess/cocoa/NetworkProcessCocoa.mm:
        (WebKit::NetworkProcess::platformInitializeNetworkProcessCocoa):

2015-04-02  Alexey Proskuryakov  <ap@apple.com>

        Make checkURLReceivedFromWebProcess not rely on details of platform URL implementation.
        https://bugs.webkit.org/show_bug.cgi?id=143222
        rdar://problem/19978997

        Reviewed by Sam Weinig.

        * UIProcess/WebProcessProxy.cpp:
        (WebKit::WebProcessProxy::checkURLReceivedFromWebProcess):

2015-04-02  Yusuke Suzuki  <utatane.tea@gmail.com>

        Clean up EnumerationMode to easily extend
        https://bugs.webkit.org/show_bug.cgi?id=143276

        Reviewed by Geoffrey Garen.

        Use default EnumerationMode().

        * WebProcess/Plugins/Netscape/NPJSObject.cpp:
        (WebKit::NPJSObject::enumerate):

2015-04-02  Chris Dumez  <cdumez@apple.com>

        [WK2][iOS] Update the WebContent process' sandbox profile for AWD
        https://bugs.webkit.org/show_bug.cgi?id=143340
        <rdar://problem/20375170>

        Reviewed by Alexey Proskuryakov.

        Update the WebContent process' sandbox profile for AWD.

        * Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb:

2015-04-01  Antti Koivisto  <antti@apple.com>

        Use std::chrono types to represent time in response and cache classes
        https://bugs.webkit.org/show_bug.cgi?id=143316

        Reviewed by Andreas Kling.

        * NetworkProcess/NetworkResourceLoader.cpp:
        (WebKit::NetworkResourceLoader::didFinishLoading):
        * NetworkProcess/cache/NetworkCache.cpp: