@@ -1,3 +1,15 @@
+2015-04-02  Timothy Horton  <timothy_horton@apple.com>
+
+        De-PLATFORM(IOS)-ify LayerHostingContext::setFencePort
+        https://bugs.webkit.org/show_bug.cgi?id=143342
+
+        Reviewed by Myles C. Maxfield.
+
+        * Platform/mac/LayerHostingContext.h:
+        * Platform/mac/LayerHostingContext.mm:
+        (WebKit::LayerHostingContext::setFencePort):
+        There's nothing iOS specific about this.
+
 2015-04-02  Oliver Hunt  <oliver@apple.com>
 
         Ensure that we always set network ATS context in the network process
